Adding some css in form.html file and add style.css file

--- a/style.css
+++ b/style.css
@@ -36,3 +36,28 @@ body{
     color: #00abf0;
 
 }
+.para{
+    background-color: aqua;
+    
+}
+.bgimage {
+    height:100vh;
+    /* background: url('PicsArt_01-09-05.43.38.jpg'); */
+    background-size:cover;
+    position:relative;
+}
+/* text css above hero image*/
+.hero_title {
+    font-size: 4.5rem;
+}
+.hero_desc {
+    font-size: 2rem;
+}
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
