--- a/cssStyle.css
+++ b/cssStyle.css
@@ -4,28 +4,39 @@ body{
 }
 .container{
     display: flex;
-    height: 850px;
-    background-color: rgb(144, 146, 146);
+    background-color: rgb(255, 255, 255);
     justify-content: center;
+    align-items: center;
 }
 .calc{
-    display: flex;
+   
     height: 500px;
     width: 300px;
-    background-color: rgba(15, 7, 7, 0.74);
-    margin: 17px;
-    border-radius: 20px;
+    background-color: rgba(173, 162, 162, 0.6);
+    margin: 7px;
+    border-radius: 10px;
     justify-content: center;
+    
 }
-.calc2{
-    height: 75px;
-    width: 386px;
-    background-color: rgb(253, 253, 253);
-    margin: 12px;
+.calc1{
+    background-color:white;
+            margin: 12px;
+            height: 77px;
+            clear: both;
    
 }
+.button {
+  
+   display:inline-block;
+   background-color: aqua;
+   border-radius: 4px;
+   height: 35px;
+   width: 35px;
+
+     
+}
 .button1{
-    height: 35px;
-    margin: 56px;
-    background-color: rgb(121, 42, 42);
+    justify-content:space-around;
+   
+
 }
